# data-portals

./: .env.example  .gitignore  README.md  docker-compose.ci.yml  docker-compose.e2e.prod.yml  docker-compose.yml
backend/: Dockerfile  gunicorn_conf.py  prestart.sh  pyproject.toml  setup.cfg  start-reload.sh  start.sh  wait_for_database.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/datasets/: Taux de fonctionalité par region - Blad1.csv
backend/scripts/: cov-html.sh  format.sh  lint.sh  test.sh
backend/tests/: conftest.py  test_main.py
backend/tests/api/v1/: test_router.py
frontend/: .prettierignore  Dockerfile  config.ts  package-lock.json  package.json
frontend/components/: ClusteredMap.tsx  GroupBarChart.tsx  MapPopup.tsx  UnclusteredMap.tsx
frontend/libs/: data-types.ts  fetcher.ts
frontend/pages/: _app.tsx  data.tsx  guide.tsx  hygiene.tsx  index.tsx  ping.tsx  sanitation.tsx  water-quality.tsx  water.tsx
frontend/styles/: global.css
frontend/tests/: setup-env.js
frontend/tests/components/: GroupBarChart.test.js
frontend/tests/mocks/: router.tsx
frontend/tests/pages/: _app.test.js  data.test.js  guide.test.js  hygiene.test.js  index.test.js  index.test.tsx  ping.test.js  ping.test.tsx  sanitation.test.js  water-quality.test.js  water.test.js
frontend/tests/pages/__snapshots__/: _app.test.js.snap  data.test.js.snap  guide.test.js.snap  hygiene.test.js.snap  index.test.js.snap  index.test.tsx.snap  ping.test.js.snap  sanitation.test.js.snap  (+2 more)
nginx/: default.conf
scripts/: _test-e2e.sh  e2e.sh  test.sh
