[tool.poetry]
name = "akvo-portals-backend"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
psycopg2-binary = "^2.8.5"
uvicorn = "^0.11.5"
gunicorn = "^20.0.4"
tenacity = "^6.2.0"
sqlalchemy = "^1.3.18"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.0.4"
pytest = "^5.4.3"
pytest-cov = "^2.10.0"
requests = "^2.24.0"
autoflake = "^1.3.1"
mypy = "^0.782"
sqlalchemy-stubs = "^0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
